[tool.poetry]
name = "pwrapp"
version = "0.0.0"
description = "Dash application for mcce"
authors = ["andros21 <andrea.ros21@e.email>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.1"
pandas = "^2.1.2"
SQLAlchemy = "^2.0.22"
dash = "^2.14.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
